--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,12 @@ License: MIT + file LICENSE
 Imports: 
     config,
     golem,
-    shiny
+    shiny,
+    processx
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+Suggests: 
+    testthat,
+    spelling
+Language: en-US
