--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Imports:
     golem (>= 0.2.1.90),
     shiny (>= 1.5.0),
     shinyjs,
-    shinydashboard
+    shinydashboard,
+    shinyWidgets
 Remotes: Thinkr-open/golem
 Encoding: UTF-8
 LazyData: true
