--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(postgresql_setup_server)
 export(postgresql_setup_ui)
 export(run_app)
 import(shiny)
+importFrom(DBI,dbConnect)
+importFrom(RPostgres,Postgres)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
