--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,13 @@ export(run_app)
 import(shiny)
 importFrom(DBI,dbConnect)
 importFrom(RPostgres,Postgres)
+importFrom(glue,glue)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(magrittr,"%>%")
 importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
