add deps - for show/hide/reset UI - to disconnect from db

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(run_app)
 import(shiny)
 importFrom(DBI,dbConnect)
 importFrom(RPostgres,Postgres)
+importFrom(RPostgres,dbDisconnect)
 importFrom(glue,glue)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
@@ -17,3 +18,7 @@ importFrom(magrittr,extract)
 importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
+importFrom(shinycssloaders,withSpinner)
+importFrom(shinyjs,hide)
+importFrom(shinyjs,reset)
+importFrom(shinyjs,show)
