--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: A shiny module to authenticate your R Shiny Application with a Post
 License: MIT + file LICENSE
 Imports: 
     config,
-    golem (>= 0.2.1.90),
+    golem,
     shiny (>= 1.5.0),
     shinyjs,
     shinydashboard,
@@ -19,7 +19,6 @@ Imports:
     glue,
     magrittr,
     shinycssloaders
-Remotes: Thinkr-open/golem
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
