remove old pkgdown site from main branch - use gh-pages branch for site deployment - cleanup _pkgdown.yml

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -14,7 +14,9 @@ authors:
 navbar:
   structure:
     left: [search]
-    right: [articles, reference, github]
+    right: [reference, github]
+  components:
+    home: ~
 reference:
   - title: "Package Information"
     contents:
